--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
     "http": "^0.0.1-security",
     "react-router-dom": "^7.2.0",
     "socket.io": "^4.8.1",
-    "socket.io-client": "^4.8.1"
+    "socket.io-client": "^4.8.1",
     "cors": "^2.8.5",
     "multer": "^1.4.5-lts.1",
     "pg": "^8.13.3",
