--- a/capstone-be/package.json
+++ b/capstone-be/package.json
@@ -3,11 +3,11 @@
   "version": "1.0.0",
   "main": "app.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
     "start:dev": "nodemon app.js",
     "start": "node app.js",
     "seed:dev": "nodemon ./server/seed.js",
-    "seed": "node ./server/seed.js"
+    "seed": "node ./server/seed.js",
+    "test": "jest --runInBand"
   },
   "keywords": [],
   "author": "",
@@ -24,5 +24,9 @@
     "nodemon": "^3.1.9",
     "pg": "^8.13.3",
     "uuid": "^11.1.0"
+  },
+  "devDependencies": {
+    "jest": "^29.7.0",
+    "supertest": "^7.0.0"
   }
 }
