--- a/capstone-fe/.env
+++ b/capstone-fe/.env
@@ -1,2 +1,4 @@
-VITE_API_BASE_URL=http://localhost:3000/api/users
+VITE_API_BASE_URL=http://localhost:3000/api
 JWT_SECRET=your_super_secret_key
+
+
