--- a/package.json
+++ b/package.json
@@ -1,13 +1,14 @@
 {
   "dependencies": {
+    "bootstrap": "^5.3.3",
+    "cors": "^2.8.5",
     "express": "^4.21.2",
     "http": "^0.0.1-security",
+    "multer": "^1.4.5-lts.1",
+    "pg": "^8.13.3",
     "react-router-dom": "^7.2.0",
     "socket.io": "^4.8.1",
     "socket.io-client": "^4.8.1",
-    "cors": "^2.8.5",
-    "multer": "^1.4.5-lts.1",
-    "pg": "^8.13.3",
     "uuid": "^11.1.0"
   }
 }
