--- a/capstone-fe/package.json
+++ b/capstone-fe/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "dev": "vite",
     "start": "vite",
-    "build": "vite build",
+    "build": "vite build && cp _redirects dist/",
     "lint": "eslint .",
     "preview": "vite preview"
   },
